Geometry nodes crash involving point translation and points to volume #90999

Closed
opened 2021-08-27 23:21:58 +02:00 by brunnerh · 7 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: AMD Radeon RX 5700 XT ATI Technologies Inc. 4.5.14830 Core Profile Context 21.4.1 27.20.21002.112

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-08-26 20:00, hash: 2b64b4d90d
Worked: Unknown.
Cannot open reference file in stable (crashes immediately).
My oldest 3.0 from 2021-08-01 (836aeebf7077) also has the issue.

Short description of error
Blender crashes in certain setups involving point translation and points to volume.

Exact steps for others to reproduce the error

  • Open .blend file
  • Connect "Crash" node with Reroute

Upon some more testing I found that there are more specific values or ranges that cause the problem, when using the power node one is around 2 to the power of 24.003.

image

attribute-power.crash.txt

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: AMD Radeon RX 5700 XT ATI Technologies Inc. 4.5.14830 Core Profile Context 21.4.1 27.20.21002.112 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-08-26 20:00, hash: `2b64b4d90d` Worked: Unknown. Cannot open reference file in stable (crashes immediately). My oldest 3.0 from 2021-08-01 (`836aeebf7077`) also has the issue. **Short description of error** Blender crashes in certain setups involving point translation and points to volume. **Exact steps for others to reproduce the error** - Open .blend file - Connect "Crash" node with Reroute Upon some more testing I found that there are more specific values or ranges that cause the problem, when using the power node one is around 2 to the power of 24.003. ![image](/attachments/964cb8b5-3262-4640-b21d-3c44727c5c7c) [attribute-power.crash.txt](https://archive.blender.org/developer/F10337713/attribute-power.crash.txt)
Author

Added subscriber: @brunnerh

Added subscriber: @brunnerh
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

I can reproduce it. The problem is probably that the required coordinates are out of bounds in openvdb (it crashes deep in openvdb code: P2369). We could try to correct for that when creating the volume, either by changing the transform of the grid or by enforcing some bounding box. That doesn't have high priority for me though.

I can reproduce it. The problem is probably that the required coordinates are out of bounds in openvdb (it crashes deep in openvdb code: [P2369](https://archive.blender.org/developer/P2369.txt)). We could try to correct for that when creating the volume, either by changing the transform of the grid or by enforcing some bounding box. That doesn't have high priority for me though.
Philipp Oeser removed the
Interest
Nodes & Physics
label 2023-02-10 08:44:35 +01:00
Member

The node setup from the original report is not valid anymore.

However, using a equivalent setup, I cn still repro:

image

The node setup from the original report is not valid anymore. However, using a equivalent setup, I cn still repro: ![image](/attachments/964cb8b5-3262-4640-b21d-3c44727c5c7c)
Member

@JacquesLucke : crash is still not considered high priority, right?

@JacquesLucke : crash is still not considered high priority, right?
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-03-11 19:35:11 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#90999
No description provided.